methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:24: error: Unmatched closing brace '}' ignored here
}
^MethodsReturning:28: error: eof expected but '}' found.
}
^